--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "ethers": "^6.0.3",
     "ts-node": "^10.9.1",
     "yarn": "^1.22.19"
   }
