--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "ethers": "^6.0.3",
+    "react-router-dom": "^6.8.1",
     "ts-node": "^10.9.1",
     "yarn": "^1.22.19"
   }
