--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "build": "yarn run build",
     "test": "yarn run test",
+    "sampledapp": "yarn workspace @face/sampledapp",
+    "iframe": "yarn workspace @face/iframe",
     "bootstrap": "yarn install && lerna exec yarn install",
     "fmt": "prettier --write '**/*.{js,jsx,ts,tsx}'",
     "check": "prettier --check '**/*.{js,jsx,ts,tsx}'",
     "lint": "eslint --fix '**/*.{js,jsx,ts,tsx}'"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "8.22.0",
@@ -28,6 +31,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "ethers": "^6.0.3",
+    "react-router-dom": "^6.8.1",
     "ts-node": "^10.9.1",
     "yarn": "^1.22.19"
   }
